syntax = "proto3";
package Baseledger.baseledgerbridge.baseledgerbridge;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "baseledgerbridge/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/Baseledger/baseledger-bridge/x/baseledgerbridge/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/Baseledger/baseledgerbridge/baseledgerbridge/params";
  }
  // Queries a list of DelegateKeysByEthAddress items.
	rpc DelegateKeysByEthAddress(QueryDelegateKeysByEthAddressRequest) returns (QueryDelegateKeysByEthAddressResponse) {
		option (google.api.http).get = "/Baseledger/baseledgerbridge/baseledgerbridge/delegate_keys_by_eth_address/{ethAddress}";
	}

// Queries a list of DelegateKeysByOrchestratorAddress items.
	rpc DelegateKeysByOrchestratorAddress(QueryDelegateKeysByOrchestratorAddressRequest) returns (QueryDelegateKeysByOrchestratorAddressResponse) {
		option (google.api.http).get = "/Baseledger/baseledgerbridge/baseledgerbridge/delegate_keys_by_orchestrator_address/{orchestratorAddress}";
	}

// Queries a list of LastEventNonceByAddress items.
	rpc LastEventNonceByAddress(QueryLastEventNonceByAddressRequest) returns (QueryLastEventNonceByAddressResponse) {
		option (google.api.http).get = "/Baseledger/baseledgerbridge/baseledgerbridge/last_event_nonce_by_address/{address}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryDelegateKeysByEthAddressRequest {
  string ethAddress = 1;
}

message QueryDelegateKeysByEthAddressResponse {
  string validatorAddress = 1;
  string orchestratorAddress = 2;
}

message QueryDelegateKeysByOrchestratorAddressRequest {
  string orchestratorAddress = 1;
}

message QueryDelegateKeysByOrchestratorAddressResponse {
  string validatorAddress = 1;
  string ethAddress = 2;
}

message QueryLastEventNonceByAddressRequest {
  string address = 1;
}

message QueryLastEventNonceByAddressResponse {
  uint64 eventNonce = 1;
}

// this line is used by starport scaffolding # 3
